package it.unibo.oop.hearthcode.model.player.api;

/**
 * A simple enum used to distinguish the two types of player.
 */
public enum PlayerType { 
    HUMAN_PLAYER,

    IA_PLAYER

}
